--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@ body{
     color: white;
     overflow: hidden;
 }
+
+.app{
+    overflow: auto;
+}
 h1{
     text-align: center;
 }
@@ -34,6 +38,7 @@ h1{
     flex-direction: column;
     align-items: flex-start;
     margin-right: 25px;
+    /* overflow-y:scroll; */
 }
 input{
     /* border: 2px rgb(214, 10, 10); */
@@ -94,6 +99,7 @@ input{
     justify-content: space-between;
     margin-top: 8px;
     margin-left: 10px;
+    
     
 }
 
