--- a/src/App.css
+++ b/src/App.css
@@ -1,127 +1,162 @@
 body{
     background-color: #1f1e1e;
-    color: white;
+    color:white;
     overflow: hidden;
-}
-
-.app{
-    overflow: auto;
-}
-h1{
+  }
+  
+  h1{
     text-align: center;
-}
-.hero{
+  }
+  
+  .todo-wrapper{
+  background: #353434;
+  padding: 2%;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3%;
+  max-height: 80vh;
+  overflow-y: auto;
+  box-shadow: 0px 5px 7px rgb(27, 27, 27);
+  
+  }
+  
+  .todo-input{
     display: flex;
-    justify-content: center;
     align-items: center;
-}
-.todo-wrapper{
-    background-color: #1a1212;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 50px 150px;
-    box-shadow: 0px 2px 2px 0px rgb(10, 0, 0);
-}
-
-.todo-input{
-    display: flex;
     justify-content: center;
-    align-items: center;
-    border-bottom: 0.5px solid black;
-    padding: 8px 8px;
-    gap: 9px;
-    
-    
-}
-
-
-.todo-input-items{
+    border-bottom: 1px solid rgb(78, 78, 78);
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+  }
+  
+  .todo-input-item{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-right: 25px;
-    /* overflow-y:scroll; */
-}
-input{
-    /* border: 2px rgb(214, 10, 10); */
-    padding: 9px 40px;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    margin: 2px;  
-    
-      
-}
-.todo-input-items label{
+  }
+  
+  .todo-input-item label{
     font-weight: bold;
-    padding-bottom: 5px;
-}
-
-.primarybtn{
-    color: #1f1e1e;
-    cursor: pointer;
-    background-color: rgb(9, 240, 201);
-}
-.primarybtn:hover{
-    background-color: aqua;
-    color: #1f1e1e;
-    cursor: pointer;
-}
-.secondarybtn{
-    margin-top: 50px;
-    padding: 8px 13px;
-    color: #dee2e1;
-    cursor: pointer;
+    margin-bottom: 10px;
+  }
+  
+  .todo-input-item input{
+    padding: 8px;
     border: none;
-    outline: none;
-    background-color:#030303;
-}
-.active{
-    background-color: #d61919;
-    color: antiquewhite;
-}
-
-.todo-list{
-    display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
-    flex-direction: column;
-    background-color: #1f1e1e;
-    margin: 9px;
-    padding: 9px;
-    font-size: 18px;
-    box-shadow: 0.2px 1px 2px 1px rgb(13, 13, 13);
-}
-
-.todo-list-item{
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 8px;
-    margin-left: 10px;
-    
-    
-}
-
-.todo-list-item .icon{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    font-size: 30px;
+    width: 250px;
+  }
+  
+  .todo-input-item input:focus{
+    outline: 2px solid rgb(0,230,122);
+  }
+  
+  .primaryBtn{
+    background-color: rgb(0,230,122);
+    color: white;
+    border:none;
+    border-radius: 0px;
+    margin-top: 25px;
+    padding: 10px;
+    width: 60px;
     cursor: pointer;
-}
-
-.todo-list-item h3{
-    margin: 0%;
-    color: aquamarine;
-}
-
-.icon .del-icon:hover{
-  color: #d61919;
-}
-
-.icon .ok-icon:hover{
-   color: aquamarine;
-}
+  }
+  
+  .primaryBtn:hover{
+    background-color: rgb(4, 196, 106);
+  }
+  
+  
+  .secondaryBtn{
+    background-color: rgb(71, 71, 71);
+    color: white;
+    border:none;
+    border-radius: 0px;
+    margin-top: 25px;
+    padding: 10px;
+    width: fit-content;
+    cursor: pointer;
+  
+  }
+  
+  .active{
+    background-color: rgb(250, 12, 12);
+  }
+  
+  .todo-list{
+    display: flex;
+    flex-direction: column;
+  
+  }
+  
+  .btn-area{
+    margin-bottom: 15px;
+  }
+  
+  .todo-list-item{
+    background-color: #414040;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0px 3px 5px rgb(43, 42, 42);
+  }
+  
+  .todo-list-item h3{
+    font-size: 25px;
+    color: rgb(191, 28, 28);
+    font-weight: bold;
+    margin: 0;
+  }
+  
+  .todo-list-item p{
+    font-size: 14px;
+    color: rgb(161, 161, 161);
+    margin-top: 8px;
+  }
+  
+  .icon{
+    font-size: 35px;
+    cursor: pointer;
+  }
+  
+  .icon:hover{
+    color: red;
+  }
+  
+  .check-icon{
+    font-size: 25px;
+    margin-left: 10px;
+    color:rgb(217, 225, 221);
+    cursor: pointer;
+  }
+  
+  .check-icon:hover{
+    color: rgb(4, 196, 106);
+  }
+  
+  .edit__wrapper{
+    background-color: #414040;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .edit__wrapper input,.edit__wrapper textarea{
+    border: 1px solid lightgray;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 3px;
+  }
+  
+  .edit__wrapper .primaryBtn{
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    font-size: 16px;
+    width:fit-content;
+  }
