--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ body{
   }
   
   .todo-input-item{
-    display: inline;
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-right: 25px;
