--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body{
   }
   
   .todo-input{
-    display: inline;
+    display: flex;
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid rgb(78, 78, 78);
